[project]
name = "ao_ann"
version = "0.1.0"
description = "American Options Pricing ANN"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Mustafif Khan", email = "me@mustafif.com" }]
maintainers = [{ name = "Mustafif Khan", email = "me@mustafif.com" }]
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sphinx>=8.2.3",
    "torch>=2.6.0",
]
